--- a/Makefile.in
+++ b/Makefile.in
@@ -269,7 +269,7 @@ AM_CFLAGS = \
 AM_LDFLAGS = \
 	${top_builddir}/libgui/libgui.la \
 	${top_builddir}/libgcode/libgcode.la \
-	@GTK_LIBS@ @GTKGLEXT_LIBS@ @PNG_LIBS@ -lexpat
+	@GTK_LIBS@ @GTKGLEXT_LIBS@ @PNG_LIBS@ -lexpat -lm
 
 SUBDIRS = \
 	libgui \
