--- a/samples/Makefile.in
+++ b/samples/Makefile.in
@@ -228,7 +228,7 @@ top_srcdir = @top_srcdir@
 gcamfilesdir = $(pkgdatadir)/samples
 dist_gcamfiles_DATA = \
 	board_layout.gbr \
-	board_drill.cnc \
+	board_drill.drl \
 	continuity.gcam \
 	fish.gcam \
 	hub.gcam \
